--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,11 +34,8 @@ jobs:
             - name: Type-check
               run: tsc --noEmit
 
-            - name: Setup Deno
-              uses: denoland/setup-deno@v2
-
             - name: Publish package to JSR
-              run: deno publish --allow-dirty --unstable-sloppy-imports --allow-slow-types
+              run: bunx jsr publish --allow-dirty --allow-slow-types
 
             # - name: Install Node
             #   uses: actions/setup-node@v4
