--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-	"name": "@gramio/auto-answer-callback-query",
+	"name": "@gramio/broadcast",
 	"version": "0.0.3",
 	"exports": "./src/index.ts",
 	"publish": {
@@ -8,5 +8,5 @@
 	"imports": {
 		"gramio": "jsr:@gramio/core@^0.1.3"
 	},
-	"nodeModulesDir": "auto"
+	"nodeModulesDir": "manual"
 }
