--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,8 @@
 		"include": ["deno.json", "src", "README.md", "LICENSE"]
 	},
 	"imports": {
-		"gramio": "jsr:@gramio/core@^0.1.3"
+		"gramio": "jsr:@gramio/core@^0.1.3",
+		"jobify": "jsr:@kravets/jobify@^0.1.5"
 	},
 	"nodeModulesDir": "auto"
 }
